fix the nav logo size

--- a/index.html.html
+++ b/index.html.html
@@ -10,13 +10,13 @@
     <link rel="stylesheet" href="web.css">
 
     <!-- For modern browsers -->
-    <link rel="icon" type="image/png" sizes="32x32" href="resorces/fav.png">
+    <link rel="icon" type="image/png" sizes="10x10" href="resorces/fav.png">
 
     <!-- For Apple devices -->
-    <link rel="apple-touch-icon" sizes="180x180" href="resorces/fav.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="resorces/circle-l copy.png">
 
     <!-- For Android Chrome -->
-    <link rel="manifest" href="resorces/fav.png">
+    <link rel="manifest" href="resorces/circle-l copy.png">
     </head>
     <body>
 
